# libfuncs

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  test_function.py
.github/workflows/: python-app.yml  tests.yml
benchmarks/: benchmark_zeros.py
docs/: generate_docs.py
examples/: basic_usage.py
libfuncs/: __init__.py  cli.py  main.py
libfuncs/analysis/: __init__.py  poles.py  roots.py  zeros.py
libfuncs/calculus/: __init__.py  derivatives.py  extrema.py  integrals.py
libfuncs/core/: __init__.py  evaluator.py  function.py  parser.py
libfuncs/utils/: __init__.py  numerical.py
libfuncs/visualization/: __init__.py  plotting.py
tests/: test_analysis.py  test_calculus.py  test_core.py  test_function.py  test_visualization.py
