[tool.poetry]
name = "libfuncs"
version = "0.1.0"
description = "This library aims to provide easier calculation to problems related to mathematical functions"
authors = ["ItsMrNatural <premkishore273@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
