[tool.poetry]
name = "libfuncs"
version = "0.1.0"
description = "This library aims to provide easier calculation to problems related to mathematical functions"
authors = ["ItsMrNatural <example@example.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/merakith/libfuncs"
repository = "https://github.com/merakith/libfuncs"
documentation = "https://libfuncs.readthedocs.io"
keywords = ["mathematics", "calculus", "functions", "plotting", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = {version = "^1.24.2", source = "pypi"}
matplotlib = "^3.7.1"
sympy = "^1.12.0"  # Add sympy for symbolic computation

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.25.2"

[tool.poetry.scripts]
libfuncs = "libfuncs.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"